vlib/v/checker/tests/orm_no_default_value.vv
import sqlite

struct Person {
	id int [primary; sql: serial]
}

fn main() {
	db := sqlite.connect(':memory:')?
	_ := sql db {
		select from Person
	} or {
	}
}
